--- a/boilerplate/bower.json
+++ b/boilerplate/bower.json
@@ -16,6 +16,13 @@
     "tests"
   ],
   "dependencies": {
-    "page": "^1.7.1"
+    "page": "^1.7.1",
+    "cash": "^1.3.5",
+    "es6-promise": "^4.0.5",
+    "xr": "https://github.com/radiosilence/xr.git",
+    "mustache.js": "mustache#^2.3.0",
+    "store-js": "^1.3.20",
+    "bourbon": "^4.2.7",
+    "neat": "^1.8.0"
   }
 }
