--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -9,6 +9,11 @@
   "author": "David Linner",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-inject": "^4.2.0",
+    "gulp-uglify": "^2.0.0",
+    "main-bower-files": "^2.13.1",
+    "var": "^0.2.0"
   }
 }
