--- a/boilerplate/bower.json
+++ b/boilerplate/bower.json
@@ -23,6 +23,7 @@
     "mustache.js": "mustache#^2.3.0",
     "store-js": "^1.3.20",
     "bourbon": "^4.2.7",
-    "neat": "^1.8.0"
+    "neat": "^1.8.0",
+    "lodash": "^4.17.4"
   }
 }
