--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -13,7 +13,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^4.2.0",
     "gulp-sass": "^3.0.0",
+    "gulp-serve": "^1.4.0",
     "gulp-uglify": "^2.0.0",
+    "lodash": "^4.17.4",
     "main-bower-files": "^2.13.1",
     "var": "^0.2.0"
   }
